[tool.poetry]
name = "doughnuts"
version = "3.6.1"
description = "A webshell manager for PHP"
authors = ["WAY29 <toloveu29@gmail.com>"]
license = "MIT"
readme = "Readme.md"
homepage = "https://github.com/way29/doughnuts"
repository = "https://github.com/way29/doughnuts"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
colorama = "^0.4.3"
prettytable = "^0.7.2"
pysocks = "^1.7.1"

[tool.poetry.dev-dependencies]
icecream = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
